--- a/RPS/lab_5/templates/index.html
+++ b/RPS/lab_5/templates/index.html
@@ -20,13 +20,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 5</title>
+    <title>Лаб. 5</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <p class="title">Гусаров Аркадий РК6-63Б. Лаб. 5. Вариант 25</p>
+        <div class="wrapper__header">
+            <p class="title">Лаб. 5. Вариант 25</p>
+            <form action="" method="post">
+                <button type="submit" class="button">Сменить цвет</button>
+            </form>
+        </div>
         <canvas id="canvas" width="900px;" height="700px;"></canvas>
     </div>
 
